<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nested_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.zark.baking.RecipeOverviewFragment">

    <LinearLayout
        android:id="@+id/layout_ingredients_directions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/overview_ingred_title_padding"
                android:text="@string/ingredients_list_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:text="Ingredients" />

            <!--<View-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="2dp"-->
                <!--android:layout_marginTop="2dp"-->
                <!--android:background="@color/colorLightGrey" />-->

            <android.support.v7.widget.RecyclerView
                android:id="@+id/ingredients_recycler_view"
                android:background="@color/colorLightPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/ingredients_recycler_view_margin"
                android:layout_marginTop="@dimen/ingredients_recycler_view_margin">

            </android.support.v7.widget.RecyclerView>

            <!--<View-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="2dp"-->
                <!--android:background="@color/colorLightGrey" />-->

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/overview_directions_padding"
            android:text="@string/directions_list_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            tools:text="Directions" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/overview_divider_height"
            android:background="@color/colorLightGrey" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/directions_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/overview_directions_margin"
            android:layout_marginTop="@dimen/overview_directions_margin"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingStart="@dimen/overview_directions_padding">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
