...
        android:gravity="center"
        android:text="@string/btn_back"
        android:textAppearance="@android:style/TextAppearance.Material.Large.Inverse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/button_next" />

    <TextView
        android:id="@+id/button_next"
        android:layout_width="0dp"
        android:layout_height="@dimen/nagivation_button_height"
        android:background="@color/colorBtnNext"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/button_back"
        app:layout_constraintRight_toRightOf="parent" />

    <FrameLayout
        android:id="@+id/main_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
...
