<resources>
    <string name="app_name">Baking</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ingredients_list_title">Ingredients</string>
    <string name="directions_list_title">Directions</string>

    <!--Main Activity-->
    <string name="empty_view_recipe_cards">Hmm, something went wrong! Are you connected to the internet?</string>

    <!--Recipe Detail Activity-->
    <string name="btn_back">Back</string>
    <string name="btn_next">Next</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <!--Recipe Widget-->
    <string name="empty_view_widget">Select a recipe to show a shopping list.</string>
    <string name="widget_title">Shopping List</string>

</resources>
