<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:paddingTop="0dp"
    tools:context="com.example.zark.baking.RecipeCardsFragment">

    <!-- A RecyclerView to display a collection of recipes -->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_cards_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/empty_view_recipe_cards" />

</RelativeLayout>
