...
    android:paddingBottom="@dimen/card_padding_bottom"
    android:focusable="true"
    android:clickable="true"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardview_item"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_height"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation"
        app:cardUseCompatPadding="true">

...
